-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
crash> osc_thread_info.oti_resname,oti_attr ffff943f97d56420
oti_resname = {
name = {11811161088, 115, 0, 0}
}
oti_attr = {
cat_size = 0,
cat_kms = 0,
cat_mtime = 0,
cat_atime = 0,
cat_ctime = 1582070493,
cat_blocks = 1,
cat_uid = 0,
cat_gid = 0,
cat_nlink = 0,
cat_projid = 0
}
crash> struct osc_object.oo_oinfo 0xffff943f98348b40
oo_oinfo = 0xffff943f9bd9e980
crash> lov_oinfo 0xffff943f9bd9e980
struct lov_oinfo {
loi_oi = {
{
oi = {
oi_id = 8589935618,
oi_seq = 554
},
oi_fid = {
f_seq = 8589935618,
f_oid = 554,
f_ver = 0
}
}
},
loi_ost_idx = 0,
loi_ost_gen = 0,
loi_kms_valid = 1,
loi_kms = 22584,
loi_lvb = {
lvb_size = 22584,
lvb_mtime = 1582070493,
lvb_atime = 1582070491,
lvb_ctime = 1582070493,
lvb_blocks = 18446744073709551615, // 0xffffffffffffffff
lvb_mtime_ns = 0,
lvb_atime_ns = 0,
lvb_ctime_ns = 0,
lvb_padding = 0
},
loi_ar = {
ar_rc = 0,
ar_force_sync = 0,
ar_min_xid = 0
}
}
- is related to
-
LU-11463 DOM: osc_extent_make_ready()) ASSERTION( last_oap_count > 0 ) failed
-
- Resolved
-